; ModuleID = '/home/carl/AnghaBench/progress/extr_progress.c_int_handler.c'
source_filename = "/home/carl/AnghaBench/progress/extr_progress.c_int_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@flag_monitor = common dso_local global i64 0, align 8
@flag_monitor_continuous = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @int_handler(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @flag_monitor, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %1
  %6 = load i64, i64* @flag_monitor_continuous, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %5, %1
  %9 = call i32 (...) @endwin()
  br label %10

10:                                               ; preds = %8, %5
  %11 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @endwin(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
